--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,1 +1,8 @@
-<text>Fun With Flag</text>
+<view class="container">
+  <view class="card" wx:for="{{countries}}"> 
+    <image src="{{item.photo.path}}" mode="aspectFit"></image>
+    <view class="name">{{item.name}}</view>
+  </view>
+</view>
+
+
