--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -1,13 +1,15 @@
 
-<view class="header">Fun with {{name}} </view>
+<view class="header">Fun with Flags presents: {{countries.name}} </view>
 <view class="container-card">
-  <view class="card-title"> This is the flag from the country of {{name}}</view>
-<image src="https://wonderfulengineering.com/wp-content/uploads/2015/08/China-Flag-1.png"></image>
+  <view class="card-title"> This is the flag from the country of {{countries.name}}</view>
+<image src="{{countries.photo}}"></image> 
 <view class="funfact-card">
-  <view class="card-title"> Funfact</view>
+  <view class="card-title"> Funfact:</view>
+  <view>{{funfact}}</view>
 </view>
 <view class="restaurant-card">
-  <view class="card-title"> Best {{}} food in the city </view>
-  <view class="adress"> Adress: </view>
+  <view class="card-title"> Best {{countries.name}} food in the city </view>
+  <view class="adress"> Adress:{{countries.restaurant}} </view>
 </view>
+<button bindtap="backToIndex" type="primary">Go back to Index</button>
 </view>
