- m "on show page connect BaaS, add navigate bar "

--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -1,15 +1,17 @@
 
-<view class="header">Fun with Flags presents: {{countries.name}} </view>
+<view class="header">Fun with Flags presents: </view>
 <view class="container-card">
-  <view class="card-title"> This is the flag from the country of {{countries.name}}</view>
-<image src="{{countries.photo}}"></image> 
-<view class="funfact-card">
+  <view class="card-title">{{countries.name}}</view>
+<view>
+<image src="{{countries.photo.path}}"></image> 
+</view>
+</view>
+<view class="funfact-card" wx:for="{{funfacts}}">
   <view class="card-title"> Funfact:</view>
-  <view>{{funfact}}</view>
+  <view>{{item.description}}</view>
 </view>
-<view class="restaurant-card">
-  <view class="card-title"> Best {{countries.name}} food in the city </view>
-  <view class="adress"> Adress:{{countries.restaurant}} </view>
-</view>
-<button bindtap="backToIndex" type="primary">Go back to Index</button>
+
+
+<view class="button">
+<button bindtap="switchTab" type="primary">Go back to Index</button>
 </view>
