--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -35,6 +35,10 @@ Page {
   margin-bottom: 5px;
   margin-top: 55px;
 }
+.likebtn {
+  height: 68rpx;
+  width: 68rpx
+}
 
 .restaurant-card {
   height: 220rpx;
