pages/profile/profile

--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -1,5 +1,8 @@
 <view class="contanier"> 
   <view class="card">
+    <view class='avartar'>
+      <open-data type='userAvatarUrl'></open-data>
+    </view>
     <open-data type="userNickName" class="name"></open-data>
   </view>
   <view class="card2">My Favorite</view>
