--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -13,14 +13,22 @@ page {
   box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
   margin: 32rpx 0;
   display: flex;
-
+  background-color: whitesmoke;
 }
 
 .name{
 color: #565158;
 font-size: 40rpx;
-font-weight: 600;
-font-style: initial;
+font-weight: 400;
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.avartar{
+  height: 150rpx;
+  width: 150rpx;
+  border-radius: 60%;
+  overflow: hidden;
+  
 }
 
 .card2 {
@@ -31,9 +39,10 @@ font-style: initial;
   box-sizing: border-box;
   box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
   margin: 32rpx 0;
-  font-size: 50rpx;
-  font-weight: 600;
+  font-size: 40rpx;
+  font-weight: 500;
   color: #565158;
-  font-style: initial;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  background-color: whitesmoke;
 }
 
