--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -1,31 +1,23 @@
-page {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-}
-
 .card {
   height: 100px;
   width: 100%;
-  background: whitesmoke;
   padding: 16rpx;
   box-sizing: border-box;
   box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-  margin: 32rpx 0;
+  margin-right: 20rpx;
   display: flex;
-  background-color: white;
-  border-radius: 15px;
-
+  background-color:whitesmoke;
+  border-radius: 10px;
 }
 
-.name{
+.name {
 color: #565158;
-font-size: 40rpx;
-font-weight: 500;
-font-family: sans-serif;
+font-size: 35rpx;
+font-weight: 400;
+font-family: 'Lobster';
 }
 
-.avartar{
+.avatar {
   height: 150rpx;
   width: 150rpx;
   border-radius: 60%;
@@ -35,16 +27,15 @@ font-family: sans-serif;
 .card2 {
   height: 500px;
   width: 100%;
-  background: white;
   padding: 16rpx;
   box-sizing: border-box;
   box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-  border-radius: 15px;
+  border-radius: 10px;
   margin: 32rpx 0;
   font-size: 40rpx;
   font-weight: 500;
-  color: #565158;
-  font-family: sans-serif;
-  background-color: white;
+  color:#565158;
+  font-family:OpenSans;
+  background-color:whitesmoke;
 }
 
