--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -1,16 +1,16 @@
 <view class="header">Fun with Flags presents: </view>
 <view class="container-card">
-    <view class="card-title"> This is the flag from the country of {{countries.name}}
-      <view bindtap="countLikes"> 
+    <view class="card-title"> This is the flag from the country of {{country.name}}
+      <view bindtap="addFavorite"> 
       <image class="likebtn" src="/pages/show/img/3 yarn, heart, needl.png">Favorite</image> 
       </view>
-      <view id="likeId" >{{countries.likednum}}</view>
+      <view id="likeId" >{{country.likednum}}</view>
     </view>
-<image src="{{countries.photo.path}}"></image> 
+<image src="{{country.photo.path}}"></image> 
 
-<view class="funfact-card" wx:for="{{funfacts}}">
+<view class="funfact-card">
   <view class="card-title"> Funfact:</view>
-  <view>{{item.description}}</view>
+  <view>{{funFact}}</view>
 </view>
 
 <view class="button">
