--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -1,20 +1,34 @@
-<view class="header">Fun with Flags presents: </view>
-<view class="container-card">
-    <view class="card-title"> This is the flag from the country of {{countries.name}}
-      <view bindtap="countLikes"> 
-      <image class="likebtn" src="/pages/show/img/3 yarn, heart, needl.png">Favorite</image> 
-      </view>
-      <view id="likeId" >{{countries.likednum}}</view>
-    </view>
-<image src="{{countries.photo.path}}"></image> 
+<view class="header">
+  <view class="header-name">Fun with Flags</view> 
+</view>
 
-<view class="funfact-card" wx:for="{{funfacts}}">
-  <view class="card-title"> Funfact:</view>
+<view class="card">
+    <view class="card-title"> This is the flag from the country of</view>
+      <view class="country-name">{{countries.name}}</view>
+      <view bindtap="countLikes"></view>
+    <view>
+        <image src="{{countries.photo.path}}"></image>
+    </view> 
+      <view class="country-footer">
+        <view>
+          <image class="likebtn" src="/pages/show/img/heart.png"></image> 
+        </view>
+          <view class="likenum" id="likeId">
+            {{countries.likednum}}
+           </view>
+      </view>
+ 
+   </view>
+
+  <view class="funfact-card">
+  <view wx:for="{{funfacts}}">
+  </view>
+    <view class="card-title"> Funfact:</view>
   <view>{{item.description}}</view>
 </view>
 
 <view class="button">
   <button bindtap="switchTab" type="primary">Go back to Index</button>
 </view>
-</view>
+
 
