--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -1,43 +1,71 @@
 Page {
-  background: rgb(250, 250, 250);
+  background: #E9E9E9;
 }
 
 .container {
   padding: 32rpx;
 }
 
-.header {
-  font-size: 40rpx;
-  color: gray;
-  justify-items: center;
+.header{
+  background-color:#565158;
+  display: flex;
   text-align: center;
-  margin-bottom: 25px;
+  justify-content: center;
+  align-items: center;
+  display: block;
+  height: 100rpx;
+  padding-top: 7rpx;
 }
 
-.container-card {
-  height: 640rpx;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-  background-color: white;
-  border-radius: 4px 4px 4px 4px;
-  padding: 10px 25px 25px 25px;
-  box-sizing: border-box;
-  margin-bottom: 5px;
-  margin-top: 5px;
+.header-name{
+  color: #F7DD8E;
+  font-size: 70rpx;
+  align-content: center;
 }
+
+  .card {
+    height: 750rpx;
+    width: 700rpx; 
+    background: white;
+    padding: 10rpx;
+    box-sizing: border-box;
+    box-shadow: 5rpx 5rpx 5rpx 5rpx #aaaaaa;
+    margin-left: 20rpx;
+    margin-top:30rpx;
+    padding: 20rpx;
+    border-radius: 4rpx;
+    justify-content:center;
+    display: inline-block;
+    overflow: hidden;
+  }
+
+  .country-footer{
+    margin-top: 20rpx;
+    margin-bottom: 20rpx;
+    display: flex;
+    justify-content: flex-end;
+  }
 
 .funfact-card {
-  height: 320rpx;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-  background-color: white;
-  border-radius: 4px 4px 4px 4px;
-  padding: 10px 25px 25px 25px;
+  height: 200rpx;
+  width: 700rpx;
+  background: white;
+  padding: 10rpx;
   box-sizing: border-box;
-  margin-bottom: 5px;
-  margin-top: 55px;
+  box-shadow: 5rpx 5rpx 5rpx 5rpx #aaaaaa;
+  margin-left: 20rpx;
+  margin-top:30rpx;
+  padding: 20rpx;
+  border-radius: 4rpx;
+  justify-content:center;
+  display: inline-block;
+  overflow: hidden;
 }
 .likebtn {
   height: 68rpx;
-  width: 68rpx
+  width: 68rpx;
+  margin-top: 10rpx;
+  margin-right: 25rpx;
 }
 
 .restaurant-card {
@@ -52,8 +80,19 @@ Page {
 
 .card-title {
   font-size: 35rpx;
-  font-weight: bolder;
+  text-align: center;
+}
 
+.country-name{
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20rpx;
+}
+
+.likenum{
+  margin-right: 35rpx;
+  padding-top: 10rpx;
+  margin-top: 10rpx;
 }
 
 .adress{
@@ -62,4 +101,9 @@ font-size: medium;
 
 .button{
   margin-top: 35rpx;
+  margin-bottom: 20rpx;
+}
+
+.btn{
+  color: white;
 }
