--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -1,5 +1,5 @@
 <view class="card">
-  <open-data class="avartar" type='userAvatarUrl'></open-data>
+  <open-data class="avatar" type='userAvatarUrl'></open-data>
 
   <view wx:if="{{user.nickname}}">
     <view class="name">Welcome {{user.nickname}}</view>
