counter fixed, thanks Alex

--- a/pages/show/show.wxml
+++ b/pages/show/show.wxml
@@ -5,20 +5,17 @@
 <view class="card">
   <view class="card-title"> This is the flag from the country of</view>
   <view class="country-name">{{country.name}}</view>
-  <image src="{{country.photo.path}}"></image> 
+  <image class="card-img" src="{{country.photo.path}}"></image> 
   <view class="country-footer">
-    <image class="likebtn" src="/pages/show/img/heart.png"/>
+    <image class="likebtn" bindtap="addFavorite" wx:if="{{!liked}}" src="/pages/show/img/heart.png"/>
+    <image class="likebtn" bindtap="removeFavorite" wx:if="{{liked}}" src="/pages/show/img/heart-hover.svg"/>
     <view class="likenum" id="likeId">{{country.likednum}}</view>
   </view>
 </view>
 
 <view class="funfact-card">
-  <view class="card-title"> Funfact:</view>
-  <view>{{item.description}}</view>
-</view>
-
-<view class="button">
-  <button bindtap="switchTab" type="primary">Go back to Index</button>
+  <view class="card-title">Funfact:</view>
+  <view style="text-align: center">{{funFact}}</view>
 </view>
 
 
