--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -36,10 +36,10 @@ Page {
   box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
   border-radius: 10px;
   margin: 32rpx 0;
-  font-size: 40rpx;
-  font-weight: 500;
+  font-size: 50rpx;
+  font-weight: 400;
   color:#565158;
-  font-family:'OpenSans';
+  /* font-family:'Lobster'; */
   background-color:whitesmoke;
 }
 .header {
